Prepare for azure-messaging-servicebus 7.14.0 release (#34946)
* ServiceBus: Remove extra subscription in sync receiver client (#34838)

* Remove double subscription in SB sync receiver

* ServiceBus: fixes for renew lock tracing (#34813)

* Trace individual renew session local management calls rather long-running logical  operation

* Running Prepare-Release for azure-messaging-servicebus

---------

Co-authored-by: Liudmila Molkova <limolkova@microsoft.com>